--- a/linling-core/src/main/resources/templates/AppInfo.html
+++ b/linling-core/src/main/resources/templates/AppInfo.html
@@ -10,13 +10,13 @@
     <meta content="App Info Power by Linling Core" name="description">
     <meta content="Linling Core" name="author">
     <!-- Bootstrap核心CSS和JS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <script src="js/jquery.min.js" type="text/javascript"></script>
+    <link href="core/static/css/bootstrap.min.css" rel="stylesheet">
+    <script src="core/static/js/jquery.min.js" type="text/javascript"></script>
     <!-- 首页样式 -->
-    <link href="css/index.css" rel="stylesheet">
+    <link href="core/static/css/index.css" rel="stylesheet">
     <!-- 背景样式 -->
-    <script src="js/three.min.js" type="text/javascript"></script>
-    <link href="css/background.css" rel="stylesheet">
+    <script src="core/static/js/three.min.js" type="text/javascript"></script>
+    <link href="core/static/css/background.css" rel="stylesheet">
     <!-- 让A标签都在新的页面 -->
     <base target="_blank">
 </head>
