--- a/linling-core/src/main/resources/templates/AppInfo.html
+++ b/linling-core/src/main/resources/templates/AppInfo.html
@@ -10,13 +10,13 @@
     <meta content="App Info Power by Linling Core" name="description">
     <meta content="Linling Core" name="author">
     <!-- Bootstrap核心CSS和JS -->
-    <link href="/core/static/css/bootstrap.min.css" rel="stylesheet">
-    <script src="/core/static/js/jquery.min.js" type="text/javascript"></script>
+    <link href="/linling/static/css/bootstrap.min.css" rel="stylesheet">
+    <script src="/linling/static/js/jquery.min.js" type="text/javascript"></script>
     <!-- 首页样式 -->
-    <link href="/core/static/css/index.css" rel="stylesheet">
+    <link href="/linling/static/css/index.css" rel="stylesheet">
     <!-- 背景样式 -->
-    <script src="/core/static/js/three.min.js" type="text/javascript"></script>
-    <link href="/core/static/css/background.css" rel="stylesheet">
+    <script src="/linling/static/js/three.min.js" type="text/javascript"></script>
+    <link href="/linling/static/css/background.css" rel="stylesheet">
     <!-- 让A标签都在新的页面 -->
     <base target="_blank">
 </head>
@@ -33,10 +33,20 @@
                         <ul class="nav masthead-nav">
                             <li class="active"><a href="#">应用信息</a></li>
                             <li><a href="/swagger-ui/index.html" id="APIHost"
-                                   th:href="${app.getAppApiHost()}">API查询</a>
+                                   th:href="${app.getAppApiHost()}">
+                                API查询
+                            </a>
                             </li>
                             <li><a href="/druid/login.html" id="SQLHost"
-                                   th:href="${app.getAppSQLManageHost()}">SQL监控</a></li>
+                                   th:href="${app.getAppSQLManageHost()}">
+                                SQL监控
+                            </a>
+                            </li>
+                            <li><a href="/linling/core/manage" id="CoreManage"
+                                   th:href="${app.getAppCoreManageHost()}">
+                                管理后台
+                            </a>
+                            </li>
                         </ul>
                     </nav>
                 </div>
