--- a/linling-core/src/main/resources/templates/Manage.html
+++ b/linling-core/src/main/resources/templates/Manage.html
@@ -11,15 +11,15 @@
     <!-- 上述3个meta标签*必须*放在最前面，响应式布局 -->
     <title th:text="${app.getTitle()}">控制台</title>
     <!-- JQuery -->
-    <script src="/core/static/js/jquery.min.js"></script>
+    <script src="/linling/static/js/jquery.min.js"></script>
     <!-- Bootstrap核心CSS 、JS-->
-    <link href="/core/static/css/bootstrap.min.css" rel="stylesheet">
-    <script src="/core/static/js/bootstrap.min.js"></script>
+    <link href="/linling/static/css/bootstrap.min.css" rel="stylesheet">
+    <script src="/linling/static/js/bootstrap.min.js"></script>
     <!-- 适用于Surface /台式机Windows 8错误的IE10视口黑客 -->
-    <script src="/core/static/js/ie10-viewport-bug-workaround.js"></script>
-    <link href="/core/static/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+    <script src="/linling/static/js/ie10-viewport-bug-workaround.js"></script>
+    <link href="/linling/static/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
     <!-- 样式 -->
-    <link href="/core/static/css/manage.css" rel="stylesheet">
+    <link href="/linling/static/css/manage.css" rel="stylesheet">
     <script>
         /* 点击变蓝 */
         $(function () {
@@ -73,7 +73,7 @@
                         <span class="glyphicon glyphicon-heart"></span> 签到
                     </button>
                 </li>
-                <li><a href="home/welcome.html" target="_view">
+                <li><a href="/linling/core" target="_view" th:href="${app.getWelcome()}">
                     <span class="glyphicon glyphicon-user"></span>
                     <span id="userName">姓名</span></a>
                 </li>
@@ -105,7 +105,7 @@
         <!-- 业务窗口 -->
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
             <!-- iframe -->
-            <iframe frameborder="0" height="90%" id="_view" name="_view" src="/core"
+            <iframe frameborder="0" height="90%" id="_view" name="_view" src="/linling/core"
                     th:src="${app.getWelcome()}" width="100%"></iframe>
         </div>
     </div>
