--- a/linling-core/src/main/resources/templates/AppLogin.html
+++ b/linling-core/src/main/resources/templates/AppLogin.html
@@ -6,24 +6,18 @@
     <meta content="width=device-width, initial-scale=1,user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"
           name="viewport">
     <!-- 上述meta标签*必须*放在最前面，作用是自适应布局 -->
-    <title th:text="${app.getAppName()}">LinLing Core About</title>
+    <title th:text="${app.getAppName()}+'登录'">LinlingCore登录</title>
     <meta content="App Info Power by Linling Core" name="description">
     <meta content="Linling Core" name="author">
     <!-- Bootstrap核心CSS和JS -->
     <link href="/linling/static/css/bootstrap.min.css" rel="stylesheet">
     <script src="/linling/static/js/jquery.min.js" type="text/javascript"></script>
+    <script src="/linling/static/js/linling-core-tools.js" type="text/javascript"></script>
     <!-- 首页样式 -->
     <link href="/linling/static/css/index.css" rel="stylesheet">
     <!-- 背景样式 -->
     <script src="/linling/static/js/three.min.js" type="text/javascript"></script>
     <link href="/linling/static/css/background.css" rel="stylesheet">
-    <!-- 让A标签都在新的页面 -->
-    <base target="_blank">
-    <script>
-        $(function () {
-            getAppInfo();
-        });
-    </script>
 </head>
 <body>
 <div class="site-wrapper">
@@ -36,7 +30,7 @@
                         Linling</h3></a>
                     <nav>
                         <ul class="nav masthead-nav">
-                            <li class="active"><a href="#">应用信息</a></li>
+                            <li class="active"><a href="/linling/core" th:href="${app.getAppInfoHost()}">应用信息</a></li>
                             <li><a href="/swagger-ui/index.html" id="APIHost"
                                    th:href="${app.getAppApiHost()}">
                                 API查询
@@ -57,24 +51,30 @@
                 </div>
             </div>
 
-            <!-- app信息 -->
+            <!-- 登录框 -->
             <div class="inner cover"
-                 style="margin-top: 20px;margin-bottom: 50px;padding: 20px;background-color: rgba(152,206,234,0.3);border-radius: 20px">
+                 style="margin-top: 20px;margin-bottom: 25px;padding: 20px;background-color: rgba(152,206,234,0.3);border-radius: 20px">
                 <div class="form-signin" style="padding: 20px">
-                    <h1 class="cover-heading" style="margin-bottom: 25px">
-                        <span id="appInfoName" th:text="${app.getAppName()}">Linling Core</span>
-                        <span class="label label-info" id="appVersion" style="vertical-align: super;font-size: 15px"
-                              th:text="${app.getAppVersion()}">v1.0</span>
-                    </h1>
-                    <h4 id="appInfo" style="margin-bottom: 50px" th:text="${app.getAppDescription()}">
-                        LinLing Core is a SpringBoot framework that have many modules
-                        and complete SQL monitor and API document
-                    </h4>
-                    <a href="#" id="appHost" style="margin-bottom: 25px" th:href="${app.getAppHost()}">
-                        <button class="btn btn-lg btn-info btn-block">
-                            GO
-                        </button>
-                    </a>
+                    <h1 class="cover-heading" style="margin-bottom: 40px" th:text="${app.getAppName()}+'登录'">
+                        LinLing Core登录</h1>
+                    <label class="sr-only" for="userName">用户名</label>
+                    <input autofocus class="form-control" id="userName" name="userName" placeholder="请输入用户名" required
+                           type="text">
+                    <p></p>
+                    <label class="sr-only" for="passWord">密 码</label>
+                    <input class="form-control" id="passWord" name="passWord" placeholder="请输入密码" required
+                           type="password">
+                    <div class="checkbox">
+                        <label><input id="remember" type="checkbox" value="remember-me"> 记住我</label>
+                    </div>
+                    <p></p>
+                    <button class="btn btn-lg btn-primary btn-block" onclick="doLogin(
+                                $('#userName').val(), $('#passWord').val(),
+                                $('#remember').is(':checked'),'/linling/manage'
+                                );"
+                            style="margin-top: 30px">
+                        登 录
+                    </button>
                 </div>
             </div>
 
