--- a/linling-core/src/main/resources/templates/Manage.html
+++ b/linling-core/src/main/resources/templates/Manage.html
@@ -15,6 +15,7 @@
     <!-- Bootstrap核心CSS 、JS-->
     <link href="/linling/static/css/bootstrap.min.css" rel="stylesheet">
     <script src="/linling/static/js/bootstrap.min.js"></script>
+    <script src="/linling/static/js/linling-core-tools.js" type="text/javascript"></script>
     <!-- 适用于Surface /台式机Windows 8错误的IE10视口黑客 -->
     <script src="/linling/static/js/ie10-viewport-bug-workaround.js"></script>
     <link href="/linling/static/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
@@ -30,13 +31,13 @@
                 /* 给当前添加样式 */
                 $(this).addClass("active");
             });
-            // // 判断是否登录
-            // isLogin();
-            // let user = getLocal("user");
-            // // 姓名
-            // $("#userName").html(user.name);
-            // // 头像
-            // $("#avatar").html(user.name.substr(0, 1));
+            isLogin();
+            // 判断登录
+            let user = getLocal("user");
+            // 姓名
+            $("#userName").html(user.username);
+            // 头像
+            $("#avatar").html(user.username.substr(0, 1));
         });
     </script>
 </head>
@@ -99,7 +100,7 @@
                 </li>
             </ul>
             <a style=": 50px;">
-                <button class="btn btn-danger" onclick="logout()" style="width: 100%">退出登录</button>
+                <button class="btn btn-danger" onclick="doLogout()" style="width: 100%">退出登录</button>
             </a>
         </div>
         <!-- 业务窗口 -->
