--- a/linling-core/src/main/resources/templates/Manage.html
+++ b/linling-core/src/main/resources/templates/Manage.html
@@ -10,17 +10,16 @@
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <!-- 上述3个meta标签*必须*放在最前面，响应式布局 -->
     <title th:text="${app.getTitle()}">控制台</title>
-    <!-- JQuery -->
-    <script src="/linling/static/js/jquery.min.js"></script>
-    <!-- Bootstrap核心CSS 、JS-->
-    <link href="/linling/static/css/bootstrap.min.css" rel="stylesheet">
-    <script src="/linling/static/js/bootstrap.min.js"></script>
-    <script src="/linling/static/js/linling-core-tools.js" type="text/javascript"></script>
+    <!-- Bootstrap、Jquery、Linling核心CSS和JS -->
+    <link href="/linling-static/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <script src="/linling-static/bootstrap/3.3.7/js/bootstrap.min.js" type="text/javascript"></script>
+    <script src="/linling-static/jquery/3.5.1/jquery.min.js" type="text/javascript"></script>
+    <script src="/linling-static/linling-core/js/linling-core-tools.js" type="text/javascript"></script>
     <!-- 适用于Surface /台式机Windows 8错误的IE10视口黑客 -->
-    <script src="/linling/static/js/ie10-viewport-bug-workaround.js"></script>
-    <link href="/linling/static/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+    <script src="/linling-static/linling-core/js/ie10-viewport-bug-workaround.js" type="text/javascript"></script>
+    <link href="/linling-static/linling-core/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
     <!-- 样式 -->
-    <link href="/linling/static/css/manage.css" rel="stylesheet">
+    <link href="/linling-static/linling-style/css/manage.css" rel="stylesheet">
     <script>
         /* 点击变蓝 */
         $(function () {
